Fixes app preview for environments and app clone (#131)
* fix: sequence of fetching data sources when environment id available

* fix: app preview for different environments

* fix: ui bugs

* cleanup

* fix: cloud import issue

* fix: query manager blank when privileges not available

* fix: local datasources not visible on all users

---------

--- a/frontend/src/_styles/global-datasources.scss
+++ b/frontend/src/_styles/global-datasources.scss
@@ -69,6 +69,7 @@
 
     .modal {
         position: absolute;
+        z-index: 1050;
     }
 
     .modal-content {
